# BrowserBot

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DOCKER_FIRST_USAGE.md  Dockerfile  LICENSE  README.md  RULES.md  docker-compose.yml  pyproject.toml  requirements-monitoring.txt  run.bat  run.sh
.github/workflows/: ci.yml
docker/: interactive-entrypoint.sh  supervisord.conf
docs/: DEPLOYMENT.md  ERROR_HANDLING_BEST_PRACTICES.md  IMPLEMENTATION_GUIDE.md  PERFORMANCE_OPTIMIZATIONS.md  PROJECT_STRUCTURE.md
docs/changelogs/: FIXES_IMPLEMENTED.md  IMPLEMENTATION_SUMMARY.md  PERFORMANCE_TEST_RESULTS.md
docs/research/: browser-automation-research-2024.md
examples/: advanced_patterns.py  basic_automation.py  error_handling_demo.py
scripts/: halo_progress.py  start_redis.sh  test_advanced_tasks.sh  test_advanced_tasks_fixed.sh  test_browserbot.sh  test_performance_docker.sh
scripts/debug/: test_direct_extraction.py  test_docker_performance.py  test_hacker_news.py  test_hn_fix.py  test_performance.py  test_simple.py
src/browserbot/: __init__.py  main.py
src/browserbot/agents/: __init__.py  agent_factory.py  browser_agent.py  cached_llm.py  cached_llm_wrapper.py  enhanced_executor.py  mistral_parser.py  mistral_tool_executor.py  prompts.py  tools.py
src/browserbot/browser/: __init__.py  advanced_stealth.py  browser_manager.py  page_controller.py  stealth.py
src/browserbot/core/: __init__.py  cache.py  config.py  dead_letter_queue.py  error_handler.py  errors.py  feature_flags.py  logger.py  progress.py  retry.py
src/browserbot/monitoring/: __init__.py  metrics_server.py  observability.py
src/browserbot/security/: input_validator.py
tests/: __init__.py  conftest.py  test_example.py
tests/integration/: test_browser_integration.py  test_error_handling.py  test_hacker_news_extraction.py
tests/unit/: test_config.py  test_errors.py
